<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Peel</string>
    <string name="hello_peel">Peel</string>
    <string name="control_center_title">Control Center</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="settings">Settings</string>
    <string name="silent_mode">Silent mode</string>
    <string name="silent_mode_off">Off</string>
    <string name="silent_mode_on">On</string>
</resources>
