<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/control_scrim"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000">

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cc_panel_bg"
        android:orientation="vertical"
        android:paddingTop="@dimen/cc_panel_padding_top"
        android:paddingHorizontal="@dimen/cc_panel_padding_horizontal"
        android:paddingBottom="@dimen/cc_panel_padding_bottom"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="@dimen/cc_drag_handle_width"
            android:layout_height="@dimen/cc_drag_handle_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/cc_drag_handle_margin_bottom"
            android:background="@drawable/cc_drag_handle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/brightness"
            android:textAppearance="@style/TextAppearance.Peel.Caption" />

        <SeekBar
            android:id="@+id/brightness_seek"
            style="@style/Widget.Peel.Slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:text="@string/volume"
            android:textAppearance="@style/TextAppearance.Peel.Caption" />

        <SeekBar
            android:id="@+id/volume_seek"
            style="@style/Widget.Peel.Slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/wifi_btn"
                style="@style/Widget.Peel.Chip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/chip_gap"
                android:layout_weight="1"
                android:text="@string/wifi" />

            <TextView
                android:id="@+id/bluetooth_btn"
                style="@style/Widget.Peel.Chip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/chip_gap"
                android:layout_weight="1"
                android:text="@string/bluetooth" />

            <TextView
                android:id="@+id/settings_btn"
                style="@style/Widget.Peel.Chip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/silent_toggle"
            style="@style/Widget.Peel.Chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/silent_mode"
                android:textAppearance="@style/TextAppearance.Peel.Chip" />

            <TextView
                android:id="@+id/silent_toggle_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/silent_mode_off"
                android:textAppearance="@style/TextAppearance.Peel.Body"
                android:textColor="@color/peel_text_muted" />
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
